--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   /*font-family: 'M PLUS 1p', sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./nft-bg.jpg');
+  background-image: url('./nft-bg.jpeg');
   background-size: 200% 180%;
   animation-duration: 3s;
   animation-timing-function: linear;
