--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,11 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;*/
   font-family: 'Open Sans',sans-serif;
-  /*font-family: 'M PLUS 1p', sans-serif;*/
+  font-family: 'M PLUS 1p', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./nft-bg.jpeg');
-  background-size: 200% 180%;
+  background-image: url('./bg_ak4.jpg');
+  background-size: 100% 175%;
   animation-duration: 3s;
   animation-timing-function: linear;
   animation-delay: 0s;
